fix: caption conflict (#137)
* fix: caption contenteditable switch

* fix: resize module conflict with caption

* fix: virtual scrollbar conflict with caption

* fix: resize box corner style

* test: fix posititon calculate

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -30,6 +30,7 @@
         scrollbar-width: none;
       }
       &-caption {
+        word-break: break-word;
         outline: none;
       }
       &-cell {
